--- a/app/src/main/res/layout/fragment_author_details.xml
+++ b/app/src/main/res/layout/fragment_author_details.xml
@@ -1,11 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.otherFragments.AuthorDetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:id="@+id/tv_author_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:fontFamily="sans-serif-medium"
+        android:maxLines="1"
+        android:textColor="@color/bold_text"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_author_website"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_author_name"
+        android:layout_alignStart="@id/tv_author_name"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="#8C88F8" />
+
+    <TextView
+        android:id="@+id/tv_license"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_author_website"
+        android:layout_alignStart="@id/tv_author_name"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="@color/light_text" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_icon_set"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/tv_license"
+        android:layout_marginTop="6dp" />
 
 
-</FrameLayout>
+</RelativeLayout>
