--- a/app/src/main/res/drawable/placeholder.xml
+++ b/app/src/main/res/drawable/placeholder.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#3F51B5" />
+    <solid android:color="#d2d2d2" />
 
 </shape>
