--- a/app/src/main/res/layout/recycler_view_layout_search_icon.xml
+++ b/app/src/main/res/layout/recycler_view_layout_search_icon.xml
@@ -34,8 +34,7 @@
             android:fontFamily="sans-serif-medium"
             android:text="James Win"
             android:textColor="@color/bold_text"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_type"
@@ -45,8 +44,8 @@
             android:layout_alignStart="@id/tv_name"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="3dp"
-            android:fontFamily="sans-serif-medium"
             android:layout_toEndOf="@id/iv_icon"
+            android:fontFamily="sans-serif-medium"
             android:text="Type: vector"
             android:textColor="@color/light_text"
             android:textSize="14sp" />
@@ -56,12 +55,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:fontFamily="sans-serif-medium"
             android:layout_centerVertical="true"
             android:background="@drawable/price_text_view_bg"
+            android:fontFamily="sans-serif-medium"
             android:padding="12dp"
             android:text="20$"
             android:textColor="@color/white" />
+
+        <ImageView
+
+            android:id="@+id/iv_premium"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/iv_icon"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="6dp"
+            android:src="@drawable/premium" />
 
 
     </RelativeLayout>
